--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,11 @@ jobs:
     docker:
       - image: arvindr226/alpine-ssh
     steps:
+    - add_ssh_keys:
+        fingerprints:
+            - "d2:27:ee:15:76:8c:19:9a:17:76:6f:6b:14:e9:45:17"
       - checkout
       - run: ssh -oStrictHostKeyChecking=no -v $USER@$IP "./deploy.sh"
-
 # Orchestrate our job run sequence
 workflows:
   version: 2
